--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -621,7 +621,7 @@ progress {
 }
 
 .list-inline-item:not(:last-child) {
-  margin-right: 0.5rem;
+  margin-right: 0.75rem;
 }
 
 .initialism {
@@ -12773,9 +12773,9 @@ section.resume-section .resume-section-content {
 }
 
 @media (max-width: 992px) {
-
   section.resume-section,
   section.resume-section#experience {
     padding-top: 2rem;
+    padding-bottom: 2rem;
   }
 }
